--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
 	<meta charset="utf-8">
 	<title>Startup Matchmaker</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Oswald:700|Merriweather:700,700italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/main_media_query.css">
 	<link rel="stylesheet" href="css/header.css">
 	<link rel="stylesheet" href="css/tagline.css">
 </head>
@@ -16,12 +17,17 @@
 			<nav>
 				<ul>
 					<li><strong><a href="developers.html">Developers</a></strong></li>
-					<li><strong><a href="designers.html">Designers</a></strong></li>			
-					<li><a href="how.html">How it Works</a></li>			
-					<li><a href="team.html">Our Team</a></li>			
-					<li><a href="blog.html">Blog</a></li>			
+					<li><strong><a href="designers.html">Designers</a></strong></li>
+					<li><a href="how.html">How it Works</a></li>
+					<li><a href="team.html">Our Team</a></li>
+					<li><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>
+			<div id="hamburger">
+				<div class="line"></div>
+				<div class="line"></div>
+				<div class="line"></div>
+			</div>
 		</div>
 	</header>
 	<p class="tagline">Because two brains <del>taste</del> <ins>are</ins> better than&nbsp;one.</p>
@@ -64,5 +70,6 @@
 			© 2018 Startup Matchmaker. Made in NY.
 		</div>
 	</footer>
+	<script src="js/main.js"></script>
 </body>
 </html>
